@@ -372,7 +372,7 @@ class TestWizardSave(testsuite.TestCase):
              '               type="porter"\n'
              '               project="flumotion"\n'
              '               worker="porter-worker"\n'
-             '               version="0.5.2.1">\n'
+             '               version="%(version)s">\n'
              '      \n'
              '      <property name="password">password</property>\n'
              '      <property name="port">8080</property>\n'
@@ -412,7 +412,7 @@ class TestWizardSave(testsuite.TestCase):
              '               type="default-muxer"\n'
              '               project="flumotion"\n'
              '               worker="muxer-worker"\n'
-             '               version="0.5.2.1">\n'
+             '               version="%(version)s">\n'
              '      <eater name="default">\n'
              '        <feed>encoder-audio</feed>\n'
              '        <feed>encoder-video</feed>\n'
@@ -422,7 +422,7 @@ class TestWizardSave(testsuite.TestCase):
              '               type="http-streamer"\n'
              '               project="flumotion"\n'
              '               worker="streamer-worker"\n'
-             '               version="0.5.2.1">\n'
+             '               version="%(version)s">\n'
              '      <eater name="default">\n'
              '        <feed>muxer-audio-video</feed>\n'
              '      </eater>\n'
@@ -476,7 +476,7 @@ class TestWizardSave(testsuite.TestCase):
              '               type="porter"\n'
              '               project="flumotion"\n'
              '               worker="porter-worker"\n'
-             '               version="0.5.2.1">\n'
+             '               version="%(version)s">\n'
              '      \n'
              '      <property name="password">password</property>\n'
              '      <property name="port">8080</property>\n'
@@ -606,7 +606,7 @@ class TestWizardSave(testsuite.TestCase):
              '               type="porter"\n'
              '               project="flumotion"\n'
              '               worker="porter-worker"\n'
-             '               version="0.5.2.1">\n'
+             '               version="%(version)s">\n'
              '      \n'
              '      <property name="password">password</property>\n'
              '      <property name="port">8080</property>\n'
