@@ -1,3 +1,8 @@
+2008-11-26  Xavier Queralt Mateu <xqueralt@flumotion.com>
+
+	* flumotion/test/test_wizard_save.py:
+	  Fixed wizard tests
+
 2008-11-25  Arek Korbik  <arkadini@gmail.com>
 
 	* configure.ac:
